# jenkins-job-builder

./: .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .zuul.yaml  MANIFEST.in  README.md  README.rst  jenkins-jobs  jenkins_jobs.py  jenkins_talker.py  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test.sh  tox.ini
doc/: Makefile
doc/source/: builders.rst  conf.py  configuration.rst  definition.rst  execution.rst  extending.rst  general.rst  hipchat.rst  index.rst  installation.rst  metadata.rst  notifications.rst  parameters.rst  project_externaljob.rst  project_flow.rst  project_folder.rst  project_freestyle.rst  project_matrix.rst  project_maven.rst  project_multijob.rst  project_pipeline.rst  project_workflow.rst  project_workflow_multibranch.rst  properties.rst  publishers.rst  quick-start.rst  reporters.rst  scm.rst  triggers.rst  view_list.rst  view_pipeline.rst  wrappers.rst  zuul.rst
etc/: jenkins_jobs.ini-sample
example/: ceilometer.yml  cinder.yml  devstack-gate.yml  devstack.yml  gerrit-verification-status-plugin.yml  gerrit.yml  gerritbot.yml  gerritlib.yml  glance.yml  heat.yml  horizon.yml  jenkins-job-builder.yml  keystone.yml  macros.yml  mraas.yml  nova.yml  openstack-ci-puppet.yml  openstack-common.yml  openstack-publish-jobs.yml  pbr.yml  pypi-jobs.yml  pypi-mirror.yml  python-bitrot-jobs.yml  python-cinderclient.yml  python-glanceclient.yml  python-jobs.yml  python-keystoneclient.yml  python-novaclient.yml  python-openstackclient.yml  python-quantumclient.yml  python-swiftclient.yml  quantum.yml  reddwarf.yml  requirements.yml  swift.yml  tempest.yml  zuul.yml
jenkins_jobs/: __main__.py  alphanum.py  builder.py  cache.py  cmd.py  config.py  constants.py  errors.py  formatter.py  local_yaml.py  parallel.py  parser.py  registry.py  utils.py  version.py  xml_config.py
jenkins_jobs/cli/: entry.py  parser.py
jenkins_jobs/cli/subcommand/: base.py  delete.py  delete_all.py  get_plugins_info.py  list.py  test.py  update.py
jenkins_jobs/modules/: assignednode.py  base.py  builders.py  general.py  helpers.py  hipchat_notif.py  hudson_model.py  logrotate.py  metadata.py  notifications.py  parameters.py  project_externaljob.py  project_flow.py  project_folder.py  project_freestyle.py  project_matrix.py  project_maven.py  project_multibranch.py  project_multijob.py  project_pipeline.py  project_workflow.py  properties.py  publishers.py  reporters.py  scm.py  triggers.py  view_all.py  view_jobfilters.py  view_list.py  view_pipeline.py  wrappers.py  zuul.py
jenkins_jobs/openstack/common/: setup.py
jenkins_jobs/sphinx/: yaml.py
modules/: assignednode.py  builders.py  logrotate.py  project_freestyle.py  project_maven.py  properties.py  publisher_coverage.py  publisher_docs.py  publisher_ftp.py  publisher_junit.py  publisher_none.py  publisher_pep8.py  publisher_ppa.py  publisher_tarball.py  publisher_venv.py  publisher_war.py  publishers.py  scm.py  trigger_gerrit.py  trigger_none.py  trigger_pollscm.py  trigger_timed.py  triggers.py  wrappers.py  zuul.py
projects/openstack/: ceilometer.yml  cinder.yml  devstack-gate.yml  devstack.yml  gerrit-verification-status-plugin.yml  gerrit.yml  gerritbot.yml  gerritlib.yml  glance.yml  heat.yml  horizon.yml  keystone.yml  melange.yml  mraas.yml  nova.yml  openstack-ci-puppet.yml  openstack-common.yml  pbr.yml  pypi-mirror.yml  python-cinderclient.yml  python-glanceclient.yml  python-keystoneclient.yml  python-melangeclient.yml  python-novaclient.yml  python-openstackclient.yml  python-quantumclient.yml  python-swiftclient.yml  quantum.yml  reddwarf.yml  swift.yml  tempest.yml  zuul.yml
projects/stackforge/: ceilometer.yml  heat.yml  mraas.yml  reddwarf.yml
samples/: README.md  gerrit-trigger.yaml  pipeline.yaml  release.yaml  sonar.yaml
templates/: openstack_publish_jobs.yml  pypi_jobs.yml  python_bitrot_jobs.yml  python_jobs.yml  python_library_jobs.yml
tests/: base.py
tests/builder/: test_builder.py
tests/builders/: test_builders.py
tests/builders/fixtures/: ansible-playbook001.xml  ansible-playbook001.yaml  ansible-playbook002.xml  ansible-playbook002.yaml  ansible-playbook003.xml  ansible-playbook003.yaml  ant001.xml  ant001.yaml  ant002.xml  ant002.yaml  artifact-resolver-full.xml  artifact-resolver-full.yaml  artifact-resolver-minimal.xml  artifact-resolver-minimal.yaml  artifact-resolver.xml  batch.xml  batch.yaml  beaker-content.xml  beaker-content.yaml  beaker-path.xml  beaker-path.yaml  build-name-setter001.xml  build-name-setter001.yaml  build-name-setter002.xml  build-name-setter002.yaml  build-publish-docker-image-full.xml  build-publish-docker-image-full.yaml  build-publish-docker-image-minimal.xml  build-publish-docker-image-minimal.yaml  builders-from.xml  builders-from.yaml  changeassemblyversion-minimal.xml  changeassemblyversion-minimal.yaml  cloudformation.xml  (+287 more)
tests/cachestorage/: test_cachestorage.py
tests/cmd/: test_cmd.py  test_config.py  test_recurse_path.py
tests/duplicates/: test_duplicates.py
tests/errors/: test_exceptions.py
tests/general/: test_general.py
tests/hipchat/: test_hipchat.py
tests/jenkins_manager/: test_manager.py
tests/jsonparser/: test_jsonparser.py
tests/localyaml/: test_localyaml.py
tests/macros/: test_macros.py
tests/moduleregistry/: test_moduleregistry.py
tests/modules/: test_helpers.py
tests/multibranch/: test_multibranch.py
tests/notifications/: test_notifications.py
tests/parallel/: test_parallel.py
tests/parameters/: test_parameters.py
tests/properties/: test_properties.py
tests/publishers/: test_publishers.py
tests/reporters/: test_reporters.py
tests/scm/: test_scm.py
tests/triggers/: test_triggers.py
tests/views/: test_views.py
tests/wrappers/: test_wrappers.py
tests/xml_config/: test_xml_config.py
tests/yamlparser/: test_yamlparser.py
tools/: jenkins-jobs.py  pip-requires  run-compare-clonemap.yaml  run-compare-configs.sh  run-compare-xml-samples.sh  run-compare-xml.sh  test-commands.sh  test-requires  test.sh
tools/configs/: non-defaults.conf
(+1704 files in other folders)
