[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[metadata]
name = jenkins-job-builder
author = OpenStack Infrastructure Team
author_email = openstack-infra@lists.openstack.org
summary = Manage Jenkins jobs with YAML
description-file = README.rst
license = Apache License, Version 2.0
home-page = http://docs.openstack.org/infra/system-config/jjb.html
classifier =
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    jenkins_jobs

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    jenkins-jobs=jenkins_jobs.cmd:main
jenkins_jobs.projects =
    externaljob=jenkins_jobs.modules.project_externaljob:ExternalJob
    flow=jenkins_jobs.modules.project_flow:Flow
    freestyle=jenkins_jobs.modules.project_freestyle:Freestyle
    matrix=jenkins_jobs.modules.project_matrix:Matrix
    maven=jenkins_jobs.modules.project_maven:Maven
    multijob=jenkins_jobs.modules.project_multijob:MultiJob
    workflow=jenkins_jobs.modules.project_workflow:Workflow
jenkins_jobs.builders =
    raw=jenkins_jobs.modules.general:raw
jenkins_jobs.reporters =
    raw=jenkins_jobs.modules.general:raw
jenkins_jobs.properties =
    raw=jenkins_jobs.modules.general:raw
jenkins_jobs.parameters =
    raw=jenkins_jobs.modules.general:raw
jenkins_jobs.notifications =
    raw=jenkins_jobs.modules.general:raw
jenkins_jobs.publishers =
    raw=jenkins_jobs.modules.general:raw
jenkins_jobs.scm =
    raw=jenkins_jobs.modules.general:raw
jenkins_jobs.triggers =
    raw=jenkins_jobs.modules.general:raw
jenkins_jobs.wrappers =
    raw=jenkins_jobs.modules.general:raw
jenkins_jobs.modules =
    builders=jenkins_jobs.modules.builders:Builders
    general=jenkins_jobs.modules.general:General
    hipchat=jenkins_jobs.modules.hipchat_notif:HipChat
    metadata=jenkins_jobs.modules.metadata:Metadata
    notifications=jenkins_jobs.modules.notifications:Notifications
    parameters=jenkins_jobs.modules.parameters:Parameters
    properties=jenkins_jobs.modules.properties:Properties
    publishers=jenkins_jobs.modules.publishers:Publishers
    reporters=jenkins_jobs.modules.reporters:Reporters
    scm=jenkins_jobs.modules.scm:SCM
    triggers=jenkins_jobs.modules.triggers:Triggers
    wrappers=jenkins_jobs.modules.wrappers:Wrappers
    zuul=jenkins_jobs.modules.zuul:Zuul
