[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[metadata]
name = jenkins-job-builder
author = OpenStack Infrastructure Team
author-email = jenkins-job-builder@googlegroups.com
summary = Manage Jenkins jobs with YAML
description-file = README.rst
license = Apache License, Version 2.0
home-page = https://docs.openstack.org/infra/jenkins-job-builder/
classifier =
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    jenkins_jobs

[pbr]
warnerrors = True

[wheel]
universal = 1

[entry_points]
console_scripts =
    jenkins-jobs=jenkins_jobs.cli.entry:main
jjb.cli.subcommands =
    update=jenkins_jobs.cli.subcommand.update:UpdateSubCommand
    test=jenkins_jobs.cli.subcommand.test:TestSubCommand
    delete=jenkins_jobs.cli.subcommand.delete:DeleteSubCommand
    delete-all=jenkins_jobs.cli.subcommand.delete_all:DeleteAllSubCommand
    get-plugins-info=jenkins_jobs.cli.subcommand.get_plugins_info:GetPluginsInfoSubCommand
    list=jenkins_jobs.cli.subcommand.list:ListSubCommand
jenkins_jobs.projects =
    externaljob=jenkins_jobs.modules.project_externaljob:ExternalJob
    flow=jenkins_jobs.modules.project_flow:Flow
    folder=jenkins_jobs.modules.project_folder:Folder
    freestyle=jenkins_jobs.modules.project_freestyle:Freestyle
    matrix=jenkins_jobs.modules.project_matrix:Matrix
    maven=jenkins_jobs.modules.project_maven:Maven
    multibranch=jenkins_jobs.modules.project_multibranch:WorkflowMultiBranch
    multibranch-defaults=jenkins_jobs.modules.project_multibranch:WorkflowMultiBranchDefaults
    multijob=jenkins_jobs.modules.project_multijob:MultiJob
    pipeline=jenkins_jobs.modules.project_pipeline:Pipeline
    workflow=jenkins_jobs.modules.project_workflow:Workflow
jenkins_jobs.views =
    all=jenkins_jobs.modules.view_all:All
    list=jenkins_jobs.modules.view_list:List
    pipeline=jenkins_jobs.modules.view_pipeline:Pipeline
jenkins_jobs.builders =
    raw=jenkins_jobs.modules.general:raw
jenkins_jobs.reporters =
    raw=jenkins_jobs.modules.general:raw
jenkins_jobs.properties =
    raw=jenkins_jobs.modules.general:raw
jenkins_jobs.parameters =
    raw=jenkins_jobs.modules.general:raw
jenkins_jobs.notifications =
    raw=jenkins_jobs.modules.general:raw
jenkins_jobs.publishers =
    raw=jenkins_jobs.modules.general:raw
jenkins_jobs.scm =
    raw=jenkins_jobs.modules.general:raw
jenkins_jobs.triggers =
    raw=jenkins_jobs.modules.general:raw
jenkins_jobs.wrappers =
    raw=jenkins_jobs.modules.general:raw
jenkins_jobs.modules =
    builders=jenkins_jobs.modules.builders:Builders
    general=jenkins_jobs.modules.general:General
    hipchat=jenkins_jobs.modules.hipchat_notif:HipChat
    metadata=jenkins_jobs.modules.metadata:Metadata
    notifications=jenkins_jobs.modules.notifications:Notifications
    parameters=jenkins_jobs.modules.parameters:Parameters
    pipeline-scm=jenkins_jobs.modules.scm:PipelineSCM
    properties=jenkins_jobs.modules.properties:Properties
    publishers=jenkins_jobs.modules.publishers:Publishers
    reporters=jenkins_jobs.modules.reporters:Reporters
    scm=jenkins_jobs.modules.scm:SCM
    triggers=jenkins_jobs.modules.triggers:Triggers
    wrappers=jenkins_jobs.modules.wrappers:Wrappers
    zuul=jenkins_jobs.modules.zuul:Zuul

[flake8]
# These are ignored intentionally in openstack-infra projects; please
# don't submit patches that solely correct them or enable them.
# W504 is controversial an apparently conflicting with W503, being impossible
# to solve both of them while still keeping the line length limited.
ignore = E125,E128,H,W504
show-source = True
exclude = .virtualenv,.venv,.tox,dist,build,*.egg,.test
